<resources>
    <string name="app_name">PianoGrupo11</string>
    <string name="acerca_de_nosotros">Acerca de Nosotros</string>
    <string name="piano_de_instrumentos_musicales">Piano de Instrumentos Musicales</string>
    <string name="piano_infantil_de_la_selva">Piano Infantil de la Selva</string>
    <string name="piano_tradicional">Piano Tradicional</string>
    <string name="cambiar_tipo_piano">Cambiar Tipo de Piano</string>
    <string name="tecla">tecla</string>
    <string name="integrantes">Integrantes</string>
    <string name="foto">foto</string>
    <string name="carlos_alejandro_murga_mart_nez">Carlos Alejandro Murga Martínez</string>
    <string name="kevin_alexander_qui_onez_hern_ndez">Kevin Alexander Quiñonez Hernández</string>
    <string name="salir">Salir</string>
</resources>