<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AcercaDeNosotros">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/integrantes"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="1dp"
            android:layout_height="130dp"
            android:layout_weight="1"
            android:contentDescription="@string/foto"
            app:srcCompat="@drawable/carlos_murga_photo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/carlos_alejandro_murga_mart_nez"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="1dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:contentDescription="@string/foto"
            app:srcCompat="@drawable/kevin_quinonz" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kevin_alexander_qui_onez_hern_ndez"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>